# lockfile-change-explainer

./: CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: package-lock-new.json  package-lock-old.json  requirements-new.txt
src/lockfile_change_explainer/: __init__.py  _version.py
tests/: test_lockfile_change_explainer.py
